--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume Landing Page</title>
+    <title>LinkedInPortfolio</title>
     <link rel="stylesheet" href="The Tribute Web.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="images/profile.png">
+    <link rel="icon" type="image/png" href="images/profile.png">
 </head>
 <body>
         <section class="hero_section">
@@ -110,5 +110,6 @@
 </body>
 
 </html>
+
 
 
