--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>LinkedInPortfolio</title>
     <link rel="stylesheet" href="The Tribute Web.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <link rel="icon" type="image/png" href="https://linkdinportfolio.netlify.app/images/profile.png">
-
+    <link rel="icon" type="image/png" href="images/profile.png?v=2">
 </head>
 <body>
         <section class="hero_section">
@@ -111,6 +110,7 @@
 </body>
 
 </html>
+
 
 
 
