--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LinkedInPortfolio</title>
+    <title>Resume Landing Page</title>
     <link rel="stylesheet" href="The Tribute Web.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="images/profile.png?v=2">
 </head>
 <body>
+
+       <nav class="navbar">
+    <div class="logo">Huzaifa Ali</div>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact Me</a></li>
+    </ul>
+  </nav> 
+
         <section class="hero_section">
          <div class="text_container">
             <h2><span class="size">Hi</span>, I am Huzaifa Ali</h2>
@@ -20,7 +31,7 @@
                 Your <span class="size-2">Vision</span>, My <span class="size-2">Mission</span>.
             </h2>
          </section>
-
+ 
          <section class="work">
 
             <div class="grid-item">
@@ -108,10 +119,4 @@
        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
        <script src="Emailjs.js"></script>
 </body>
-
 </html>
-
-
-
-
-
